# vcpkg-registry

./: README.md
.github/workflows/: validate-e2e.yml  validate-registry.yml
docs/: PUBLISHING_TO_OFFICIAL_REGISTRY.md
ports/kcenon-common-system/: portfile.cmake  usage  vcpkg.json
ports/kcenon-container-system/: portfile.cmake  usage  vcpkg.json
ports/kcenon-database-system/: fix-common-system-target.patch  portfile.cmake  usage  vcpkg.json
ports/kcenon-logger-system/: fix-unified-deps-target-names.patch  portfile.cmake  usage  vcpkg.json
ports/kcenon-monitoring-system/: portfile.cmake  usage  vcpkg.json
ports/kcenon-network-system/: fix-common-system-target.patch  fix-internal-header-include.patch  portfile.cmake  usage  vcpkg.json
ports/kcenon-pacs-system/: fix-vcpkg-dependency-discovery.patch  portfile.cmake  usage  vcpkg.json
ports/kcenon-thread-system/: portfile.cmake  vcpkg.json
tests/e2e/kcenon-common-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-container-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-database-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-logger-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-monitoring-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-network-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-pacs-system/: CMakeLists.txt  main.cpp
tests/e2e/kcenon-thread-system/: CMakeLists.txt  main.cpp
versions/: baseline.json
versions/k-/: kcenon-common-system.json  kcenon-container-system.json  kcenon-database-system.json  kcenon-logger-system.json  kcenon-monitoring-system.json  kcenon-network-system.json  kcenon-pacs-system.json  kcenon-thread-system.json
